# MVC_Calculator

./: CMakeLists.txt  Calculator_Example.cpp  README.md
include/: CalculatorController.h  CalculatorView.h  SharedMemory.h
linux/: CMakeCache.txt  CMakeLists.txt  CalculatorClient  CalculatorClient.cpp  CalculatorServer.cpp  Makefile
linux/include/: Calculator.h  CalculatorView.h
linux/src/: Calculator.cpp  CalculatorController.cpp  CalculatorView.cpp
src/: CalculatorController.cpp  CalculatorView.cpp  Main.cpp  SharedMemory.cpp
